# medlens-plus-app

./: .claudeignore  .codacy.yml  .coderabbit.yaml  .dockerignore  .editorconfig  .env.example  .gitignore  .markdownlint.json  .prettierignore  .prettierrc.json  .releaserc.json  AGENTS.md  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  codecov.yml  commitlint.config.cjs  docker-compose.dev.yml  docker-compose.prod.yml  eslint.config.mjs  lint-staged.config.mjs  package.json  pnpm-lock.yaml  release-please-config.json  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  branch-protection.yml  config.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md  setup-branch-protection.sh
.husky/: graphify-update.sh  post-checkout  post-commit  post-merge  pre-commit
apps/api/: .env.example  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  package.json  pyproject.toml
apps/api/src/api/: main.py
apps/api/src/api/core/: factories.py  interfaces.py  settings.py
apps/api/src/api/domain/: models.py
apps/api/src/api/providers/auth/: supabase_auth.py
apps/api/src/api/providers/db/: supabase_postgres.py
apps/api/src/api/providers/llm/: openai_provider.py
apps/api/src/api/providers/ocr/: docling_ocr.py
apps/api/src/api/providers/storage/: supabase_storage.py
apps/api/src/api/workflows/: report_processing.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_infra_connectivity.py
apps/api/tests/unit/: test_health.py  test_settings.py  test_workflow_factories.py
graphify-out/: GRAPH_REPORT.md
(+296 files in other folders)
